--- a/taxcalculator.client/src/app/pages/calculation-page/calculation-page.component.html
+++ b/taxcalculator.client/src/app/pages/calculation-page/calculation-page.component.html
@@ -1,5 +1,7 @@
 <p class="h1 ms-2 mt-2">Heading for tax page</p>
-<input type="number" min="0" class="ms-2 mt-2" placeholder="Salary" />
-<button class="ms-3 rounded" (click)="onClickHandler()">Calculate</button>
+<input type="number" min="0" class="ms-2 mt-2" placeholder="Salary" [(ngModel)]="salary" />
+<button class="ms-3 rounded" (click)="onClickCalculate()">Calculate</button>
 
-<!-- we want to make this component output the tax value which will be a required input in the component that returns the values -->
+@if(isLoading){<div>LOADING</div>}
+@if(errorMessage){<div>{{ errorMessage }}</div>}
+@if(showSummary){<app-tax-display [taxValues]="taxValues"></app-tax-display>}
