--- a/taxcalculator.client/src/app/app.component.html
+++ b/taxcalculator.client/src/app/app.component.html
@@ -1,27 +1,15 @@
 ﻿<app-calculation-page></app-calculation-page>
 
-<p class="h2 mt-4">Check API is working:</p>
-<div *ngIf="taxValues" class="d-flex flex-column">
-    <span>annual gross: {{ taxValues.annualGrossSalary | currency : "GBP" }}</span>
-    <span>annual net: {{ taxValues.annualNetSalary | currency : "GBP" }}</span>
-    <span>annual tax: {{ taxValues.annualTaxPaid | currency : "GBP" }}</span>
-    <span>monthly gross: {{ taxValues.monthlyGrossSalary | currency : "GBP" }}</span>
-    <span>monthly net: {{ taxValues.monthlyNetSalary | currency : "GBP" }}</span>
-    <span>monthly tax: {{ taxValues.monthlyTaxPaid | currency : "GBP" }}</span>
-</div>
-
-
 <aside class="mt-5">
     <h3>TODO List</h3>
     <ul>
-        <li>Pass salary to new component</li>
-        <li>Make new component send request off via service to calculate tax</li>
-        <li>Grab the value and assign it to an object</li>
-        <li>Display data in new component</li>
         <li>Unit test button click</li>
         <li>Unit test getting an error</li>
         <li>Unit test getting a success</li>
         <li>Refactor names/check if interface is suitable over class</li>
-        <li>Remove todo list and API check code and any leftover placeholder code/comments</li>
+        <li>Styling</li>
+        <li>Add helper text</li>
+        <li>Check formatting matches given wireframe</li>
+        <li>Fix input to only take in integers</li>
     </ul>
 </aside>
