Improved error handling, added styling and header, changed format of text.

--- a/taxcalculator.client/src/app/app.component.html
+++ b/taxcalculator.client/src/app/app.component.html
@@ -1,4 +1,5 @@
-﻿<app-calculation-page></app-calculation-page>
+﻿<app-header></app-header>
+<app-calculation-page></app-calculation-page>
 
 <aside class="mt-5">
     <h3>TODO List</h3>
@@ -7,9 +8,6 @@
         <li>Unit test getting an error</li>
         <li>Unit test getting a success</li>
         <li>Refactor names/check if interface is suitable over class</li>
-        <li>Styling</li>
-        <li>Add helper text</li>
-        <li>Check formatting matches given wireframe</li>
-        <li>Fix input to only take in integers</li>
+        <li>Change endpoint when backend is finished</li>
     </ul>
 </aside>
