Fixed update-db command and adjusted css on input box

--- a/taxcalculator.client/src/app/pages/calculation-page/calculation-page.component.html
+++ b/taxcalculator.client/src/app/pages/calculation-page/calculation-page.component.html
@@ -1,6 +1,6 @@
 <div class="input-group ms-2 mt-2 inputForm">
     <span class="input-group-text">Gross Annual Salary</span>
-    <input type="number" min="0" class="form-control" placeholder="Salary" [(ngModel)]="salary" />
+    <input type="number" min="0" class="form-control salary-input" placeholder="Salary" [(ngModel)]="salary" />
     <button class="ms-3 rounded" (click)="onClickCalculate()">Calculate</button>
 </div>
 
